要らない変数を消した、buttonのonclickでapi叩く仕様にしたい

--- a/nazotabi.html
+++ b/nazotabi.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>
-  <<input type="button" name="reload" value="更新" onclick="reload">
+  <<input type="button" name="reload" value="更新" onclick="return ">
   </p>
 
 
