package.jsonのstartをpagelist.jsに変更。サーバに関する記載を上に移動、html上にtextareaつけてみた

--- a/nazotabi.html
+++ b/nazotabi.html
@@ -1,14 +1,17 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML publick>
 <html lang="ja">
 <head>
   <meta charset="utf-8" >
   <title>nazotabi</title>
-  <script type="text/javascript" src="server.js"></script>
+  <script type="text/javascript" src="pagelist.js"></script>
 </head>
 <body>
 <p>
-  <<input type="button" name="reload" value="更新" onclick="return ">
-  </p>
+  <form>
+    <input type="button" name="reload" value="更新" onclick=onclick()><br />
+    <textarea name = "kokoike" value = "1" cols="50" rows="5" maxlength="15">テスト</textarea>
+  </form>
+</p>
 
 
 </body>
